<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_history">

    <fragment
        android:id="@+id/navigation_history"
        android:name="com.example.curemetik.ui.history.HistoryFragment"
        android:label="@string/title_history"
        tools:layout="@layout/fragment_history" />

    <fragment
        android:id="@+id/navigation_top"
        android:name="com.example.curemetik.ui.top.TopFragment"
        android:label="@string/title_top"
        tools:layout="@layout/fragment_top" />


    <fragment
        android:id="@+id/navigation_camera"
        android:name="com.example.curemetik.ui.camera.CameraFragment"
        android:label="@string/title_camera"
        tools:layout="@layout/fragment_camera" >
        <action
            android:id="@+id/action_navigation_camera_to_ProductDetailsFragment"
            app:destination="@id/ProductDetailsFragment" />
    </fragment>

    <fragment
        android:id="@+id/ProductDetailsFragment"
        android:name="com.example.curemetik.ui.camera.ProductDetailsFragment"
        android:label="ProductDetailsFragment"
        tools:layout="@layout/fragment_product_details" />

    <fragment
        android:id="@+id/navigation_add"
        android:name="com.example.curemetik.ui.add.AddFragment"
        android:label="@string/title_add"
        tools:layout="@layout/fragment_add" />

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.example.curemetik.ui.search.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search" />
</navigation>